5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1679_1100.log
== TEST (2019-04-25 17:28:27) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = Garca
elif (cedula == 10):
	animal = Arara
elif (cedula == 20):
	animal = Mico-leao-dourado
elif (cedula == 50):
	animal = Onca-pintada
elif (cedula == 100):
	animal = Garoupa
else:	
	print(cedula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    animal = Garoupa
NameError: name 'Garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:30:10) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
	print(animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    animal = Garoupa
NameError: name 'Garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:17) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
	print(animal)
-- EXECUTION TIME:
0.262135
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:

-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:30:20) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
	print(animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    animal = Garoupa
NameError: name 'Garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:22) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
	print(animal)
-- EXECUTION TIME:
0.206488
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:

-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:30:22) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
	print(animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    animal = Garoupa
NameError: name 'Garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:36) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
print(animal)
-- EXECUTION TIME:
0.170598
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:37) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
print(animal)
-- EXECUTION TIME:
0.132466
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:30:37) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:44) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
print(animal)
-- EXECUTION TIME:
0.188978
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:58) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
print(animal)
-- EXECUTION TIME:
0.140279
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:30:58) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:31:04) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
print(animal)
-- EXECUTION TIME:
0.199098
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:31:24) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'erro'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:32:15) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:32:20) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- EXECUTION TIME:
0.178231
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:33:08) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:33:20) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- EXECUTION TIME:
0.190288
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:33:44) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:33:52) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- EXECUTION TIME:
0.213674
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:34:16) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:34:29) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:34:44) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = 'Tartaruga'
elif (cedula == 5):
	animal  = 'Garca'
elif (cedula == 10):
	animal = 'Arara'
elif (cedula == 20):
	animal = 'Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Onca-pintada'
elif (cedula == 100):
	animal = 'Garoupa'
else:	
	animal = 'Invalido'
print(animal)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:36:41) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:36:49) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- EXECUTION TIME:
0.202293
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:37:38) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:37:49) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- EXECUTION TIME:
0.148522
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:38:46) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:38:50) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- EXECUTION TIME:
0.128064
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:39:30) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:56) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Entrada: X 
	Animal : Invalido''
print(animal)
-- ERROR:
File "XXXX", line 16
    animal = 'Entrada: X 
                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:44:10) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Entrada: X 
	Animal : Invalido'
print(animal)
-- ERROR:
File "XXXX", line 16
    animal = 'Entrada: X 
                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:44:27) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Entrada: X Animal : Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:44:33) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Entrada: X Animal : Invalido'
print(animal)
-- EXECUTION TIME:
0.225587
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: X Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:47:33) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:47:39) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- EXECUTION TIME:
0.143726
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:16) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula == R$ 2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- ERROR:
File "XXXX", line 3
    if (cedula == R$ 2):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:24) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:57:27) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:59:48) 
-- CODE:
cedula = int(input("cedula:"))

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:00:33) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:00:40) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- EXECUTION TIME:
0.127821
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:01:23) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:01:29) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- EXECUTION TIME:
0.228214
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:12:07) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 10:12:27) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)
-- EXECUTION TIME:
0.13676
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
